[package]
name = "arma-file-formats"
version = "0.1.0"
edition = "2021"
description = "Pure rust implementation of most of the Real Virtuality & Enfusion file formats."
license = "MIT"
repository = "https://github.com/arma-tools/arma-file-formats/"
readme = "README.md"
keywords = ["pbo", "paa", "p3d", "wrp", "real-virtuality", "decoding"]
categories = ["decoding", "parser-implementations", "parsing"]

[lib]
crate-type = ["lib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
num_enum = "0.6.1"

binrw = "0.11.2"

rayon = { version = "1.5.1", optional = true }
anyhow = "1.0.53"
thiserror = "1.0.30"

derivative = "2.2.0"

# Paa
squish = "2.0.0-beta1"

# PBO
indexmap = "2.0.0"
sha-1 = "0.10.1"

# Sign
rsa = { version = "0.9.2" }
rand = { version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"] }

# Rap
ariadne = "0.3.0"
chumsky = "0.9.0"

# LZO
lzokay-native = "0.1"


texpresso = "2.0.1"

# Edds
block_compression = "0.6.0"
four-cc = "0.4.0"
lzzzz = "2.0.0"
enumflags2 = "0.7.12"

[dev-dependencies]
image = "0.25.8"
serial_test = "2.0.0"

[features]
default = ["real_virtuality", "enfusion"]

parallel = ["squish/rayon", "rayon"]
real_virtuality = []
enfusion = []
